@@ -1,0 +1,36 @@
+name: docker
+
+on:
+  push:
+  schedule:
+  - cron: "32 1 * * 6"
+
+jobs:
+  docker-ci:
+    runs-on: ubuntu-latest
+    name: ${{ matrix.tag }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        tag: [ci, ci-dev, ci-4.0]
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        context: docker/${{ matrix.tag }}
+        tags: rcpp/${{ matrix.tag }}
